infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satcom-api
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: api
        image: satcom/api:latest
        ports:
        - containerPort: 4000
