infrastructure/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: satcom-api-svc
spec:
  ports:
  - port: 4000
    targetPort: 4000
