infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satcom-ingress
spec:
  rules:
  - host: satcom-engineers.com
